--- a/templates/accounts/account/account_inactive.html
+++ b/templates/accounts/account/account_inactive.html
@@ -9,15 +9,19 @@
 {% block page_name %}account-inactive{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center py-5">
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-header"><h4>{% trans "Account Inactive" %}</h4></div>
-                <div class="card-body p-4">
-                    <div class="fw-bold mb-2">Your CTB account has been deactivated.</div>
-                    <div>
-                        If you would like to reactivate your account or need more information regarding CTB policies on
-                        accounts, please contact <a href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>.
+    <div class="container">
+        <div class="row justify-content-center py-5">
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-header"><h4>{% trans "Account Inactive" %}</h4></div>
+                    <div class="card-body p-4">
+                        <div class="fw-bold mb-2">Your CTB account has been deactivated.</div>
+                        <div>
+                            If you would like to reactivate your account or need more information regarding CTB policies
+                            on
+                            accounts, please contact <a
+                                href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a>.
+                        </div>
                     </div>
                 </div>
             </div>
