--- a/templates/accounts/account/password_reset_from_key_done.html
+++ b/templates/accounts/account/password_reset_from_key_done.html
@@ -4,14 +4,16 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center py-5">
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title">{% trans "Change Password" %}</h4>
-                </div>
-                <div class="card-body p-3">
-                    {% trans 'Your password is now changed.' %}
+    <div class="container">
+        <div class="row justify-content-center py-5">
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">{% trans "Change Password" %}</h4>
+                    </div>
+                    <div class="card-body p-3">
+                        {% trans 'Your password is now changed.' %}
+                    </div>
                 </div>
             </div>
         </div>
