--- a/templates/accounts/account/password_set.html
+++ b/templates/accounts/account/password_set.html
@@ -5,16 +5,18 @@
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center py-5">
-        <div class="col-lg-4 password_set accounts-col">
-            <div class="card">
-                <div class="card-body">
-                    <h3>{% trans "Set Password" %}</h3>
-                    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button class="btn btn-special" type="submit">{% trans "Set Password" %}</button>
-                    </form>
+    <div class="container">
+        <div class="row justify-content-center py-5">
+            <div class="col-lg-6 password_set">
+                <div class="card">
+                    <div class="card-body">
+                        <h3>{% trans "Set Password" %}</h3>
+                        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button class="btn btn-special" type="submit">{% trans "Set Password" %}</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
