--- a/templates/ctb/landing.html
+++ b/templates/ctb/landing.html
@@ -32,26 +32,26 @@
                     <h1 class="fw-bold pt-4">
                         Chernobyl Tissue Bank
                     </h1>
-                    <h3 class="py-3">
+                    <h2 class="py-3">
                         The CTB is a research tissue bank that was established to collect, document, store, and issue to
                         bona
                         fide researchers, biological samples donated by patients with thyroid tumors who live in the
                         areas
                         of
                         Ukraine and Russia close to the site of the Chernobyl Nuclear Power Plant.
-                    </h3>
+                    </h2>
                 </div>
             </div>
         </div>
         <div class="bg-lightgrey-theme text-center py-5">
             <div class="d-flex justify-content-center pb-3">
                 <div class="col-lg-2 text-end">
-                    <img class="me-2" src="{% static 'img/nci-logo.svg' %}" width="120px">
+                    <img class="me-2" src="{% static 'img/nci-logo.svg' %}" width="120px" alt="nci-logo">
                 </div>
                 <div class="col-lg-8 pt-1 ps-2 text-start">
-                    <h4>
+                    <h3>
                         The Chernobyl Tissue Bank site is now hosted by the National Cancer Institute (NCI).
-                    </h4>
+                    </h3>
                 </div>
             </div>
         </div>
