--- a/templates/ctb/research_projects_2001_2009.html
+++ b/templates/ctb/research_projects_2001_2009.html
@@ -79,7 +79,7 @@
                 of Next generation RNA Sequencing and microarray data</a></li>
         </ol>
     </div>
-    <div id="01" class="anchor-section mt-5 fw-bold">Project reference number 001/2001</div>
+    <div id="01" class="anchor-section pt-5 fw-bold">Project reference number 001/2001</div>
     <p>Principal Investigator:Dr Heinz-Ulrich Weier, LBNL, University of California, Berkeley Email: <a
             href="mailto:ugweier@lbl.gov">ugweier@lbl.gov</a></p>
     <p class="bodytext"><em>Expression profiling of tyrosine kinase genes in malignant tumors of the
@@ -98,7 +98,7 @@
         of molecular markers that can be used to facilitate tumor diagnosis and staging, and, eventually,
         provide targets for therapeutic intervention.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="02" class="anchor-section mt-5 fw-bold">Project reference number 002/2001</div>
+    <div id="02" class="anchor-section pt-5 fw-bold">Project reference number 002/2001</div>
     <p>Principal Investigator:Dr GA Thomas, South West Wales Cancer Institute, University of Wales, Swansea,
         UK.<br><br>Email: <a href="mailto:gerry@mynydd-p.u-net.com">gerry@mynydd-p.u-net.com</a><br><br><em>Chernobyl,
             an Integrated Pan-European Study, morphology, oncogenes, DNA repair and outcome in radiation
@@ -118,7 +118,7 @@
         decisions on radiation protection and on clinical management of patients with radiation associated
         cancers.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="04" class="anchor-section mt-5 fw-bold">Project reference number 004/2001</div>
+    <div id="04" class="anchor-section pt-5 fw-bold">Project reference number 004/2001</div>
     <p>Principal Investigator: Professor Horst Zitzelsberger, GSF, Munich, Germany<br><br>Email: <a
             href="mailto:zitzelsberger@gsf.de">zitzelsberger@gsf.de</a><br><br><em>RET proto-oncogene
         rearrangements and tyrosine kinase gene expression in radiation induced papillary thyroid carcinomas
@@ -135,7 +135,7 @@
         expression profiles of other tyrosine kinase genes to identify other gene rearrangements which may
         occur as a sole abnormality or in addition to RET/PTC rearrangements.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="05" class="anchor-section mt-5 fw-bold">Project reference number 005/2001</div>
+    <div id="05" class="anchor-section pt-5 fw-bold">Project reference number 005/2001</div>
     <p>Principal Investigator: Professor Manuel Sobrinho-Simoes, IPATIMUP, Porto, Portugal<br><br>Email: <a
             href="mailto:sobrinho.simoes@ipatimup.pt">sobrinho.simoes@ipatimup.pt</a><br><br><em>Mitochondrial
         DNA deletions and mutations in post Chernobyl thyroid tumors and in the respective normal thyroid
@@ -158,7 +158,7 @@
         collaborate with the pathologists who have studied the cases in order to clarify the putative
         clinical significance of the mtDNA alterations.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="07" class="anchor-section mt-5 fw-bold">Project reference number 007/2001</div>
+    <div id="07" class="anchor-section pt-5 fw-bold">Project reference number 007/2001</div>
     <p>Principal Investigator: Professor Aldo Pinchera, University of Pisa, Italy<br><br>Email: <a
             href="mailto:a.pinchera@endoc.med.unipi.it">a.pinchera@endoc.med.unipi.it</a><br><br><em>Expression
         of the RET proto-oncogene in post-Chernobyl thyroid tumors and unirradiated controls: analysis of
@@ -181,7 +181,7 @@
         immunohistochemical pattern of RET protein expression, using an antibody to recognize the TK domain.
     </p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0102" class="anchor-section mt-5 fw-bold">Project Reference Number 001/2002</div>
+    <div id="0102" class="anchor-section pt-5 fw-bold">Project Reference Number 001/2002</div>
     <p>Principal Investigator: Dr Giuliana Salvatore, University of Naples, Italy<br><br>Email: <a
             href="mailto:gsalvato@unina.it">gsalvato@unina.it</a><br><br><em>Analysis of RET/PTC
         transforming ability in Thyroid cells using Oligonucleotide DNA Micro Array</em><br><br>Summary of
@@ -201,7 +201,7 @@
         clues to the molecular pathways involved in papillary thyroid carcinoma and may provide biomarkers
         for clinical use.<strong><br></strong></p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0202" class="anchor-section mt-5 fw-bold">Project Reference Number 002/2002</div>
+    <div id="0202" class="anchor-section pt-5 fw-bold">Project Reference Number 002/2002</div>
     <p>Principal Investigator: Dr Lesleyann Hawthorn, Cancer Genetics, Roswell Park Cancer Institute,
         Buffalo, New York, USA<br><br>Email: <a href="mailto:lesleyann-hawthorn@roswellpark.org">lesleyann-hawthorn@roswellpark.org</a><br><br><em>A
             Comprehensive Molecular Profile of ChildhoodRadiation Induced Papillary Thyroid Tumors Compared
@@ -221,7 +221,7 @@
         study of molecular alterations which cause thyroid carcinoma is of importance since the
         identification of causative factors could lead to new approaches for treatment.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0103" class="anchor-section mt-5 fw-bold">Project Reference Number 001/2003</div>
+    <div id="0103" class="anchor-section pt-5 fw-bold">Project Reference Number 001/2003</div>
     <p>Principal Investigator: Dr Hiroyuki Namba, Atomic Bomb Disease Institute, Nagasaki University,
         Nagasaki, Japan<br><br>Email:<a
                 href="mailto:namba@net.nagasaki-u.ac.jp">namba@net.nagasaki-u.ac.jp</a><br><br><em>A
@@ -242,7 +242,7 @@
         univariate and multivariate statistical analysis against already available results of examination of
         sporadic PTC in order to identify molecular parameter(s) specific to radiation-induced PTC.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0203" class="anchor-section mt-5 fw-bold">Project Reference number 002/2003</div>
+    <div id="0203" class="anchor-section pt-5 fw-bold">Project Reference number 002/2003</div>
     <p>Principal Investigator: Professor Scott Davis, Fred Hutchinson Cancer Centre, Seattle, USA<br><br>Email:
         <a href="mailto:sdavis@fhcrc.org">sdavis@fhcrc.org</a><br><br><em>Molecular Change and Thyroid
             Cancer Risk after ChernobylÂ&nbsp;</em><strong><br></strong><br>Project Summary:<br><br>This
@@ -261,7 +261,7 @@
         in-person interviews for all participants, and for cases only, paraffin embedded tissue or fresh
         frozen tissue, clinical history and outcome information.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0104" class="anchor-section mt-5 fw-bold">Project Reference number 001/2004</div>
+    <div id="0104" class="anchor-section pt-5 fw-bold">Project Reference number 001/2004</div>
     <p>Principal Investigator: Dr Michael M Xing, John Hopkins University School of Medicine, Baltimore
         USA<br><br>Email: <a href="mailto:mxing1@jhmi.edu">mxing1@jhmi.edu</a><br><br><em>Analysis of
             Genetic and Epigenetic Abnormalities in Radiation-induced Thyroid Cancers<br><br></em>Project
@@ -283,7 +283,7 @@
         be used. The study is expected to result in important insights into radiation-induced thyroid
         tumorigenesis and provide novel clinical implications for this special group of thyroid cancers.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0204" class="anchor-section mt-5 fw-bold">Project Reference number 002/2004</div>
+    <div id="0204" class="anchor-section pt-5 fw-bold">Project Reference number 002/2004</div>
     <p>Principal Investigator: Professor D Wynford-Thomas, University of Wales College of Medicine, Cardiff
         UK<br><br>Email: <a href="mailto:kingTD@cardiff.ac.uk">kingTD@cardiff.ac.uk</a><br><br><em>Investigation
             of molecular genetic abnormalities associated with progression of human thyroid follicular
@@ -299,7 +299,7 @@
         comparison between thyroid carcinoma and adenoma cells to identify differences that may confer an
         extended proliferative lifespan on carcinoma cells.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0304" class="anchor-section mt-5 fw-bold">Project Reference Number 003/2004</div>
+    <div id="0304" class="anchor-section pt-5 fw-bold">Project Reference Number 003/2004</div>
     <p>Principal Investigator: Professor Carine Maenhaut, ULB, Brussels<br><br>Email: <a
             href="mailto:cmaenhau@ulb.ac.be">cmaenhau@ulb.ac.be</a><br><br><em>Molecular Definition of Gene
         Expression in Chernobyl Thyroid Cancers<br><br></em>Project Summary:<br><br>Chernobyl thyroid
@@ -316,7 +316,7 @@
         validate data at the RNA level by PCR and at the protein level by Western and to define potential
         diagnostic markers and therapeutic targets.<strong>&nbsp;</strong></p>
     <p><a href="#">Go to top&nbsp;</a></p>
-    <div id="0105" class="anchor-section mt-5 fw-bold">Project reference number 001/2005</div>
+    <div id="0105" class="anchor-section pt-5 fw-bold">Project reference number 001/2005</div>
     <p>Principal Investigator:Dr PE Neiman, FHCRC, Seattle, USA&nbsp;<br><br>Email: <a
             href="mailto:pneiman@fhcrc.org">pneiman@fhcrc.org<br><br></a><em>Genomic Analysis of Gene Copy
         Number in Thyroid Cancer.<br><br></em>Summary of project:<br><br>High copy-number gene amplification
@@ -343,7 +343,7 @@
         The number of targets hit in each case should therefore be directly proportional to radiation dose.&nbsp;
     </p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0205" class="anchor-section mt-5 fw-bold">Project reference number 002/2005</div>
+    <div id="0205" class="anchor-section pt-5 fw-bold">Project reference number 002/2005</div>
     <p>Principal Investigator:Dr S Forbes-Robertson, Swansea Medical School, Swansea UK<br><br>Email: <a
             href="mailto:gerry.thomas@imperial.ac.uk">Gerry.thomas@imperial.ac.uk<br><br></a><em>The
         influence of genetic variation in DNA repair pathways on cancer risk following exposure to ionising
@@ -363,7 +363,7 @@
         Chernobyl Tissue Bank for correlation with pathology and expression of oncogenes such as ret and
         BRAF.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0107" class="anchor-section mt-5 fw-bold">Project reference number 001/2007</div>
+    <div id="0107" class="anchor-section pt-5 fw-bold">Project reference number 001/2007</div>
     <p><em>Principal Investigator: Professor H Zitzelsberger, Helmholtz Zentrum MÃ¼nchen, Neuherberg,
         Germany<br><br>Email: <a
                 href="mailto:zitzelsberger@helmholtz-muenchen.de">zitzelsberger@helmholtz-muenchen.de</a><br><br><em>Array
@@ -382,7 +382,7 @@
         cases from the age-matched series with known RET/PTC status. If successful this study will be
         extended to a larger series of cases linked to the GENRISK-T project.<br><br><a
                 href="#">Go to top&nbsp;</a></em></p>
-    <div id="0207" class="anchor-section mt-5 fw-bold">Project reference number 002/2007</div>
+    <div id="0207" class="anchor-section pt-5 fw-bold">Project reference number 002/2007</div>
     <p>Principal Investigator: Professor Carine Maenhaut, University of Brussels School of Medicine,
         Brussels, Belgium<br><br>Email: <a
                 href="mailto:cmaenhau@ulb.ac.be">cmaenhau@ulb.ac.be</a><br><br><em>Expression profiling of
@@ -397,7 +397,7 @@
         cohorts to investigate the relative effects of radioiodine and radiocaesium exposure on the
         development of thyroid cancer.<br><br><a href="#">Go to top</a>
     </p>
-    <div id="0307" class="anchor-section mt-5 fw-bold">Project reference number 003/2007</div>
+    <div id="0307" class="anchor-section pt-5 fw-bold">Project reference number 003/2007</div>
     <p>&nbsp;Principal Investigator: Dr M Abend, Bundeswehr Institute of Radiobiology, Munich,
         Germany<br><br>Email: <a
                 href="mailto:michaelabend@bundeswehr.org">michaelabend@bundeswehr.org</a><br><br><em>Gene
@@ -417,7 +417,7 @@
         previous study and extend the findings (Port et al 1007) by evaluating a dose-dependent gene
         expression pattern in 74 post-Chernobyl PTCs with individual I-131 dose estimates.<br><br><a
                 href="#">Go to top</a>&nbsp;</p>
-    <div id="0407" class="anchor-section mt-5 fw-bold">Project reference number 004/2007</div>
+    <div id="0407" class="anchor-section pt-5 fw-bold">Project reference number 004/2007</div>
     <p>Principal Investigator: Dr Y Nikiforov, University of Pittsburgh School of Medicine, Pittsburgh,
         USA<br><br>Email: <a href="mailto:nikiforovye@upmc.edu">nikiforovye@upmc.edu</a><br><br><em>Genetic
             predisposition to radiation-induced carcinogenesis and to specific genetic alterations in
@@ -436,7 +436,7 @@
         study is to identify genes involved in genetic predisposition to radiation-associated thyroid
         carcinogenesis and a pattern of SNPs that can detect it.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0108" class="anchor-section mt-5 fw-bold">Project reference number: 001/2008</div>
+    <div id="0108" class="anchor-section pt-5 fw-bold">Project reference number: 001/2008</div>
     <p>Principal Investigator: Professor GA Thomas, Imperial College London, Hammersmith Hospital,
         London<br><br>Email: <a
                 href="mailto:gerry.thomas@imperial.ac.uk">Gerry.thomas@imperial.ac.uk</a><br><br><em>Genrisk-T
@@ -463,7 +463,7 @@
         particular application is to support the investigation of human germline SNPs that may predispose to
         radioiodine induced thyroid cancer in those exposed as children and adolescents.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0022008" class="anchor-section mt-5 fw-bold">Project reference number 002/2008</div>
+    <div id="0022008" class="anchor-section pt-5 fw-bold">Project reference number 002/2008</div>
     <p>Principal Investigator: Professor B Jarzab, Maria Sklodowska-Curie Memorial Cancer Centre and
         Institute of Oncology, Gliwice, Poland<br><br>E-mail: <a href="mailto:bjarzab@io.gliwice.pl">bjarzab@io.gliwice.pl</a><br><br><em>Expression
             profiling of childhood follicular tumors: a comparison of those exposed and not exposed to
@@ -476,7 +476,7 @@
         of a series of projects that are carry on to investigate the transcriptomic and genetic profile of
         radiation induced thyroid cancer.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0032008" class="anchor-section mt-5 fw-bold">Project reference number 003/2008</div>
+    <div id="0032008" class="anchor-section pt-5 fw-bold">Project reference number 003/2008</div>
     <p>Principal Investigator: Professor H Zitzelsberger, Helmholtz Zentrum Muenchen, Neuherberg Germany<br><br>E-mail:
         <a href="mailto:zitzelsberger@helmholtz-muenchen.de">zitzelsberger@helmholtz-muenchen.de</a><br><br><em>Array
             CGH analysis of follicular post-Chernobyl thyroid tumors</em><br><br>Summary of
@@ -492,7 +492,7 @@
         determine aberrations patterns that correlate with the radiation history of patients as well as with
         any of the clinical phenotypes of the tumors.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="001009" class="anchor-section mt-5 fw-bold">Project reference number 001/2009</div>
+    <div id="001009" class="anchor-section pt-5 fw-bold">Project reference number 001/2009</div>
     <p>Principal Investigator: Professor B Jarzab, Maria Sklodowska-Curie Memorial Cancer Centre and
         Institute of Oncology, Gliwice, Poland<br><br>E-mail: <a href="mailto:bjarzab@io.gliwice.pl">bjarzab@io.gliwice.pl</a><br><br><em>Defining
             the genetic component of thyroid cancer risk at low doses request for RNA aliquots for QPCR
@@ -505,7 +505,7 @@
         results with Q-PCR analysis. We also plan to extent the analysis to exon microarray study which
         allow to detect transcript isoforms, chromosomal deletions and amplifications.<br><br><a
                 href="#">Go to top</a></p>
-    <div id="0022009" class="anchor-section mt-5 fw-bold">Project reference number 002/2009</div>
+    <div id="0022009" class="anchor-section pt-5 fw-bold">Project reference number 002/2009</div>
     <p>Principal investigator: Professor JA Fagin, Memorial Sloan-Kettering Cancer Center, New York, USA<br><br>E-mail:
         <a href="mailto:faginj@mskcc.org">faginj@mskcc.org</a><br><br><em>Identification of somatically
             acquired rearrangements in post-Chernobyl paediatric thyroid cancers using genome-wide massively
@@ -534,7 +534,7 @@
         microhomology of the rearrangement. Each of these indices may provide clues to the way large
         radiation doses induce DNA double strand breaks and how they are repaired.</p>
     <p class="bodytext"><a href="#">Go to top</a></p>
-    <div id="0032009" class="anchor-section mt-5 fw-bold">Project reference number: 003/2009</div>
+    <div id="0032009" class="anchor-section pt-5 fw-bold">Project reference number: 003/2009</div>
     <p>Principal Investigator: Professor GA Thomas, Imperial College London, Hammersmith Hospital,
         London<br><br>Email: <a
                 href="mailto:Gerry.thomas@imperial.ac.uk">Gerry.thomas@imperial.ac.uk</a><br><br><em>miRNA
@@ -555,7 +555,7 @@
         number of different growth control pathways involved in carcinogenesis of the thyroid follicular
         cell and their relationship to radiation exposure.<br><br><a
                 href="#">Go to top</a></p>
-    <div id="0207-1" class="anchor-section mt-5 fw-bold">Project reference number 002/2007-1</div>
+    <div id="0207-1" class="anchor-section pt-5 fw-bold">Project reference number 002/2007-1</div>
     <p>Principal Investigator: Dr L van Zyl, ArrayXpress, Inc. Raleigh, North Carolina, USA<br><br>Email: <a
             href="mailto:lenvanzyl@arrayxpress.com">lenvanzyl@arrayxpress.com</a><br><br><em>Validation of
         statistical and bioinformatics technologies to allow integration of Next generation RNA Sequencing
