--- a/templates/donors/clinical_search_facility.html
+++ b/templates/donors/clinical_search_facility.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col mb-3 pe-0">
-                <div class="border bg-light rounded p-3 pb-5">
+                <div class="border light-grey rounded p-3 pb-5">
                     <div class="d-flex justify-content-between">
                         <h5>Clinical Search Facility</h5>
                         <a id="clinic-skip" class="btn btn-outline-secondary d-none" href="#">
@@ -64,10 +64,10 @@
                                 </div>
 
                                 <div class="readmore-acc accordion accordion-flush" id="clinical-intro-acc">
-                                    <div class="accordion-item bg-light">
+                                    <div class="accordion-item light-grey">
                                         <h2 class="accordion-header d-md-flex justify-content-end"
                                             id="clinical-intro-acc-headingOne">
-                                            <button class="accordion-button collapsed bg-light" type="button"
+                                            <button class="accordion-button collapsed" type="button"
                                                     data-bs-toggle="collapse"
                                                     data-bs-target="#clinical-intro-one" aria-expanded="false"
                                                     aria-controls="clinical-intro-one">
@@ -163,10 +163,10 @@
                                             Treatment with Radioiodine
                                         </strong></div>
                                         <div class="readmore-acc accordion accordion-flush" id="radioiodine-intro-acc">
-                                            <div class="accordion-item bg-light">
+                                            <div class="accordion-item light-grey ">
                                                 <h2 class="accordion-header d-md-flex justify-content-md-end"
                                                     id="radioiodine-intro-acc-headingOne">
-                                                    <button class="accordion-button collapsed bg-light" type="button"
+                                                    <button class="accordion-button collapsed" type="button"
                                                             data-bs-toggle="collapse"
                                                             data-bs-target="#radioiodine-intro-one"
                                                             aria-expanded="false"
@@ -221,10 +221,10 @@
                                         </strong>
                                         </div>
                                         <div class="readmore-acc accordion accordion-flush" id="tshsupp-intro-acc">
-                                            <div class="accordion-item bg-light">
+                                            <div class="accordion-item light-grey">
                                                 <h2 class="accordion-header d-md-flex justify-content-md-end"
                                                     id="tshsupp-intro-acc-headingOne">
-                                                    <button class="accordion-button collapsed bg-light" type="button"
+                                                    <button class="accordion-button collapsed" type="button"
                                                             data-bs-toggle="collapse"
                                                             data-bs-target="#tshsupp-intro-one"
                                                             aria-expanded="false"
@@ -276,10 +276,10 @@
                                     <div class="border rounded p-3 mx-1 my-2" id="options-pt8">
                                         <div><strong>Clinical Outcome</strong></div>
                                         <div class="readmore-acc accordion accordion-flush" id="outcome-intro-acc">
-                                            <div class="accordion-item bg-light">
+                                            <div class="accordion-item light-grey">
                                                 <h2 class="accordion-header d-md-flex justify-content-end"
                                                     id="outcome-intro-acc-headingOne">
-                                                    <button class="accordion-button collapsed bg-light" type="button"
+                                                    <button class="accordion-button collapsed" type="button"
                                                             data-bs-toggle="collapse"
                                                             data-bs-target="#outcome-intro-one" aria-expanded="false"
                                                             aria-controls="outcome-intro-one">
@@ -345,10 +345,10 @@
                                 <h5><strong>TNM Status (8th Edition)</strong>
                                 </h5>
                                 <div class="readmore-acc accordion accordion-flush" id="tnm-status-intro-acc">
-                                    <div class="accordion-item bg-light">
+                                    <div class="accordion-item light-grey">
                                         <h2 class="accordion-header d-md-flex justify-content-md-end"
                                             id="tnm-status-intro-acc-headingOne">
-                                            <button class="accordion-button collapsed bg-light" type="button"
+                                            <button class="accordion-button collapsed" type="button"
                                                     data-bs-toggle="collapse"
                                                     data-bs-target="#tnm-status-intro-one" aria-expanded="false"
                                                     aria-controls="tnm-status-intro-one">
@@ -566,8 +566,6 @@
                                                 <td>
                                                     <label class="form-check-label" for="ptstatusb-t2">
                                                         <strong>T2</strong>:
-                                                    </label>
-                                                    <label class="form-check-label" for="ptstatusb-t2">
                                                         Tumor &gt; 2 cm but ≤ 4 cm in greatest dimension limited to the
                                                         thyroid
                                                     </label>
@@ -708,9 +706,9 @@
                                             <tr>
                                                 <td>
                                                 </td>
-                                                <td><label class="form-check-label" for="ptstatusb-t2">
+                                                <td><div class="form-check-label">
                                                     <strong>N1</strong>: Metastasis to regional nodes
-                                                </label>
+                                                </div>
                                                 </td>
 
                                             </tr>
@@ -749,10 +747,10 @@
                             <fieldset id="form-clinic-3" class="d-none">
                                 <h5><strong>AJCC Clinical Stage</strong></h5>
                                 <div class="readmore-acc accordion accordion-flush" id="ajcc-clinical-intro-acc">
-                                    <div class="accordion-item bg-light">
+                                    <div class="accordion-item light-grey">
                                         <h2 class="accordion-header d-md-flex justify-content-md-end"
                                             id="ajcc-clinical-intro-acc-headingOne">
-                                            <button class="accordion-button collapsed bg-light" type="button"
+                                            <button class="accordion-button collapsed" type="button"
                                                     data-bs-toggle="collapse"
                                                     data-bs-target="#ajcc-clinical-intro-one" aria-expanded="false"
                                                     aria-controls="ajcc-clinical-intro-one">
@@ -1017,7 +1015,7 @@
                 </div>
             </div>
             <div class="col-lg-4 mb-3">
-                <div class="border rounded bg-light p-3">
+                <div class="border rounded light-grey p-3">
                     <div id="clinic-sidebar" class="d-none">
                         <h6>
                             <strong>Search Progress</strong>
