--- a/templates/donors/driver_search_facility.html
+++ b/templates/donors/driver_search_facility.html
@@ -43,13 +43,13 @@ Refine by Clinical Parameters
                 {% endif %}
             </div>
             <div class="col mb-3">
-                <div class="border rounded bg-light p-4">
+                <div class="border rounded light-grey p-4">
 
                     <div class="readmore-acc accordion accordion-flush" id="driver-intro-acc">
-                        <div class="accordion-item bg-light">
+                        <div class="accordion-item light-grey">
                             <h2 class="accordion-header d-md-flex justify-content-md-end"
                                 id="driver-intro-acc-headingOne">
-                                <button class="accordion-button collapsed bg-light" type="button"
+                                <button class="accordion-button collapsed" type="button"
                                         data-bs-toggle="collapse"
                                         data-bs-target="#driver-intro-one" aria-expanded="false"
                                         aria-controls="driver-intro-one">
@@ -281,10 +281,10 @@ Refine by Clinical Parameters
                     </table>
                     <hr>
                     <div class="readmore-acc accordion accordion-flush" id="table-intro-acc">
-                        <div class="accordion-item bg-light">
+                        <div class="accordion-item light-grey">
                             <h2 class="accordion-header d-md-flex justify-content-md-end"
                                 id="table-intro-acc-headingOne">
-                                <button class="accordion-button collapsed bg-light" type="button"
+                                <button class="accordion-button collapsed" type="button"
                                         data-bs-toggle="collapse"
                                         data-bs-target="#table-intro-one" aria-expanded="false"
                                         aria-controls="table-intro-one">
