--- a/templates/donors/my_applications.html
+++ b/templates/donors/my_applications.html
@@ -3,7 +3,7 @@
     <tr>
         <th>Submitted Date</th>
         <th>Application</th>
-        <th title="Attached Summary"></th>
+        <th title="Attached Summary"><span class="sr-only">Attached Summary</span></th>
     </tr>
     </thead>
     <tbody>
