--- a/templates/two_factor/core/backup_tokens.html
+++ b/templates/two_factor/core/backup_tokens.html
@@ -7,14 +7,9 @@
 {% block content %}
     <div class="container my-5">
         <div class="row user-row justify-content-center">
-            <div class="col-md-10">
+            <div class="col-lg-10">
                 <div class="card user-panel">
-{#                    <div class="card-header">#}
-{#                        <h4><i class="fa-solid fa-code"></i> {% block title %}{% trans "Backup Tokens" %}{% endblock %}#}
-{#                        </h4>#}
-{#                    </div>#}
                     <div class="card-body px-5 py-3">
-
                         <p>{% blocktrans trimmed %}Backup tokens can be used when your primary and backup
                             phone numbers aren't available. The backup tokens below can be used
                             for login verification. If you've used up all your backup tokens, you
