--- a/templates/two_factor/profile/profile.html
+++ b/templates/two_factor/profile/profile.html
@@ -11,7 +11,7 @@
 {% block content %}
     <div class="container my-5">
         <div class="row user-row justify-content-center">
-            <div class="col-md-10">
+            <div class="col-lg-10">
                 <div class="card">
                     <div class="card-body px-5 py-3">
                         <h5 class="card-title fw-bold pb-2"><i class="fa-solid fa-shield"></i> Two-Factor Authentication
