--- a/templates/404.html
+++ b/templates/404.html
@@ -23,12 +23,15 @@
 {% block title %}Page not found{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center my-5">
-        <div class="col-lg-4 accounts-col">
-            <div class="card p-3">
-                <div class="card-body">
-                    <h4 class="card-title"><i class="fas fa-exclamation-triangle"></i> {% trans "404: Page Not Found" %}</h4>
-                    <h5>The requested page could not be found.</h5>
+    <div class="container">
+        <div class="row justify-content-center my-5">
+            <div class="col-lg-6">
+                <div class="card p-3">
+                    <div class="card-body">
+                        <h4 class="card-title"><i
+                                class="fas fa-exclamation-triangle"></i> {% trans "404: Page Not Found" %}</h4>
+                        <h5>The requested page could not be found.</h5>
+                    </div>
                 </div>
             </div>
         </div>
