--- a/templates/500.html
+++ b/templates/500.html
@@ -23,12 +23,16 @@
 {% block title %}Server error{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center my-5">
-        <div class="col-lg-4 accounts-col">
-            <div class="card p-3">
-                <div class="card-body">
-                    <h4 class="card-title"><i class="fas fa-exclamation-triangle"></i> {% trans "500: Internal Server Error" %}</h4>
-                    <p>We apologize for the inconvenience. Please <a href="mailto:help@canceridc.dev">contact us</a> and let us know what happened.</p>
+    <div class="container">
+        <div class="row justify-content-center my-5">
+            <div class="col-lg-6">
+                <div class="card p-3">
+                    <div class="card-body">
+                        <h4 class="card-title"><i
+                                class="fas fa-exclamation-triangle"></i> {% trans "500: Internal Server Error" %}</h4>
+                        <p>We apologize for the inconvenience. Please <a href="mailto:help@canceridc.dev">contact us</a>
+                            and let us know what happened.</p>
+                    </div>
                 </div>
             </div>
         </div>
