--- a/templates/accounts/account/email_confirmed.html
+++ b/templates/accounts/account/email_confirmed.html
@@ -7,15 +7,18 @@
 
 
 {% block content %}
-    <div class="row justify-content-center py-5">
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-header"><h4>{% trans "Confirm E-mail Address" %}</h4></div>
-                <div class="card-body p-5">
-                    {% user_display confirmation.email_address.user as user_display %}
-                    <p>{% blocktrans with confirmation.email_address.email as email %}You have confirmed that
-                        <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}
-                        .{% endblocktrans %}</p>
+    <div class="container">
+        <div class="row justify-content-center py-5">
+            <div class="col-lg-4">
+                <div class="card">
+                    <div class="card-header"><h4>{% trans "Confirm E-mail Address" %}</h4></div>
+                    <div class="card-body p-5">
+                        {% user_display confirmation.email_address.user as user_display %}
+                        <p>{% blocktrans with confirmation.email_address.email as email %}You have confirmed that
+                            <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user
+                            {{ user_display }}
+                            .{% endblocktrans %}</p>
+                    </div>
                 </div>
             </div>
         </div>
