--- a/templates/accounts/account/password_change.html
+++ b/templates/accounts/account/password_change.html
@@ -7,35 +7,37 @@
 {% block page_name %}password-change{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center p-5">
-        <div class="col-lg-4 accounts-col">
-            <div class="card">
-                <div class="card-header"><h4 class="card-title">Change Password</h4></div>
-                <div class="card-body p-5">
-                    {% if messages %}
-                        {% for message in messages %}
-                            {% if message.tags == 'success' %}
-                                {% trans 'Your password is now changed.' %}
+    <div class="container">
+        <div class="row justify-content-center p-5">
+            <div class="col-lg-6 accounts-col">
+                <div class="card">
+                    <div class="card-header"><h4 class="card-title">Change Password</h4></div>
+                    <div class="card-body p-5">
+                        {% if messages %}
+                            {% for message in messages %}
+                                {% if message.tags == 'success' %}
+                                    {% trans 'Your password is now changed.' %}
+                                    <div class="d-grid pt-3 gap-2">
+                                        <a class="btn btn-primary" type="button" href="{% url 'user_detail' user.id %}">Back
+                                            to My Profile</a>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+                                {% csrf_token %}
+                                {{ form.as_p }}
                                 <div class="d-grid pt-3 gap-2">
-                                    <a class="btn btn-primary" type="button" href="{% url 'user_detail' user.id %}">Back
-                                        to My Profile</a>
+                                    <button class="btn btn-primary" type="submit"
+                                            name="action">{% trans "Change Password" %}</button>
                                 </div>
-                            {% endif %}
-                        {% endfor %}
-                    {% else %}
-                        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-                            {% csrf_token %}
-                            {{ form.as_p }}
-                            <div class="d-grid pt-3 gap-2">
-                                <button class="btn btn-primary" type="submit"
-                                        name="action">{% trans "Change Password" %}</button>
-                            </div>
-                        </form>
-                    {% endif %}
+                            </form>
+                        {% endif %}
+                    </div>
                 </div>
+
+
             </div>
-
-
         </div>
     </div>
 {% endblock %}
