--- a/templates/accounts/account/password_reset.html
+++ b/templates/accounts/account/password_reset.html
@@ -15,7 +15,7 @@
     {% endif %}
     <div class="container">
         <div class="row justify-content-center py-5">
-            <div class="col-lg-6 accounts-col">
+            <div class="col-lg-6">
                 <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
                     <div class="card">
                         <div class="card-header"><h4>Password Reset</h4></div>
