--- a/templates/accounts/account/password_reset_done.html
+++ b/templates/accounts/account/password_reset_done.html
@@ -6,17 +6,20 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center py-5">
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-header"><h4>{% trans "Password Reset" %}</h4></div>
-                <div class="card-body">
-                    {% if user.is_authenticated %}
-                        {% include "account/snippets/already_logged_in.html" %}
-                    {% endif %}
-                    {% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few
-                        minutes.
-                    {% endblocktrans %}
+    <div class="container">
+        <div class="row justify-content-center py-5">
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-header"><h4>{% trans "Password Reset" %}</h4></div>
+                    <div class="card-body">
+                        {% if user.is_authenticated %}
+                            {% include "account/snippets/already_logged_in.html" %}
+                        {% endif %}
+                        {% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a
+                            few
+                            minutes.
+                        {% endblocktrans %}
+                    </div>
                 </div>
             </div>
         </div>
