--- a/templates/accounts/account/password_reset_from_key.html
+++ b/templates/accounts/account/password_reset_from_key.html
@@ -4,30 +4,35 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <div class="row justify-content-center p-5">
-        <div class="col-lg-4 accounts-col">
-            <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h4>
-                </div>
-                <div class="card-body p-5">
-                    {% if token_fail %}
-                        {% url 'account_reset_password' as passwd_reset_url %}
-                        <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
-                    {% else %}
-                        {% if form %}
-                            <form method="POST" action="{{ action_url }}" class="password_reset">
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <div class="d-grid gap-2">
-                                    <button class="btn btn-primary" type="submit"
-                                            name="action">{% trans "Change Password" %}</button>
-                                </div>
-                            </form>
+    <div class="container">
+        <div class="row justify-content-center py-5">
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">{% if token_fail %}{% trans "Bad Token" %}{% else %}
+                            {% trans "Change Password" %}{% endif %}</h4>
+                    </div>
+                    <div class="card-body p-5">
+                        {% if token_fail %}
+                            {% url 'account_reset_password' as passwd_reset_url %}
+                            <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been
+                                used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>
+                                .{% endblocktrans %}</p>
                         {% else %}
-                            <p>{% trans 'Your password is now changed.' %}</p>
+                            {% if form %}
+                                <form method="POST" action="{{ action_url }}" class="password_reset">
+                                    {% csrf_token %}
+                                    {{ form.as_p }}
+                                    <div class="d-grid gap-2">
+                                        <button class="btn btn-primary" type="submit"
+                                                name="action">{% trans "Change Password" %}</button>
+                                    </div>
+                                </form>
+                            {% else %}
+                                <p>{% trans 'Your password is now changed.' %}</p>
+                            {% endif %}
                         {% endif %}
-                    {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
