--- a/templates/base.html
+++ b/templates/base.html
@@ -124,37 +124,37 @@
 </div>
 
 
-<!-- External Web Warning Modal -->
-<div class="modal fade" id="external-web-warning" tabindex="-1" role="dialog" data-backdrop="static"
-     aria-labelledby="external-web-warning-header" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h4 class="modal-title">Leaving NCI website</h4>
-            </div>
-            <div class="modal-body">
-                <p>This link will take you to an external web site. Linking to a non-federal website does not indicate
-                    an endorsement by NCI of the sponsors
-                    or of the information and products presented on the website. You will be subject to the external
-                    website’s privacy policy when you leave
-                    NCI’s website.</p>
-            </div>
-            <div class="modal-footer">
-                <a type="button" class="btn btn-primary btn-warn" data-dismiss="modal">Cancel</a>
-                <a type="button" href="" class="btn btn-primary btn-warn" id="go-to-external-link" target="_blank"
-                   rel="noopener noreferrer">OK</a>
-            </div>
-        </div>
-    </div>
-</div>
+{#<!-- External Web Warning Modal -->#}
+{#<div class="modal fade" id="external-web-warning" tabindex="-1" role="dialog" data-backdrop="static"#}
+{#     aria-labelledby="external-web-warning-header" aria-hidden="true">#}
+{#    <div class="modal-dialog">#}
+{#        <div class="modal-content">#}
+{#            <div class="modal-header">#}
+{#                <h4 class="modal-title">Leaving NCI website</h4>#}
+{#            </div>#}
+{#            <div class="modal-body">#}
+{#                <p>This link will take you to an external web site. Linking to a non-federal website does not indicate#}
+{#                    an endorsement by NCI of the sponsors#}
+{#                    or of the information and products presented on the website. You will be subject to the external#}
+{#                    website’s privacy policy when you leave#}
+{#                    NCI’s website.</p>#}
+{#            </div>#}
+{#            <div class="modal-footer">#}
+{#                <a type="button" class="btn btn-primary btn-warn" data-dismiss="modal">Cancel</a>#}
+{#                <a type="button" href="" class="btn btn-primary btn-warn" id="go-to-external-link" target="_blank"#}
+{#                   rel="noopener noreferrer">OK</a>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
 
 <!-- Logout Modal -->
 
-<div id="logout-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="logoutModalLabel" aria-hidden="true">
+<div id="logout-modal" class="modal" tabindex="-1" role="dialog" aria-labelledby="logoutModalTitle" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Logout</h4>
+                <h4 id="logoutModalTitle" class="modal-title">Logout</h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form method="post" action="{% url 'account_logout' %}">
