--- a/templates/ctb/fact_sheet.html
+++ b/templates/ctb/fact_sheet.html
@@ -42,7 +42,7 @@
 {#            class="btn btn-outline-secondary btn-sm"><i class="fa-solid fa-download"></i> Download#}
 {#        this fact sheet as a pdf</a></div>#}
     <hr>
-    <h4><a id="one" class="anchor-section"></a>1. What is the CTB?</h4>
+    <h4><a id="one" class="anchor-section pt-5"></a>1. What is the CTB?</h4>
     <p>The CTB is an international cooperation to establish banks of biomaterial from and information on patients who
         were exposed as children or adolescents to fallout from the Chernobyl nuclear accident. It also houses research
         data derived by researchers using the CTB biomaterials, in a web accessible data warehouse. Funds to support the
@@ -70,7 +70,7 @@
         </li>
     </ol>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="two" class="anchor-section"></a>2. What types of material and information are available from the CTB?
+    <h4><a id="two" class="anchor-section pt-5"></a>2. What types of material and information are available from the CTB?
     </h4>
     <p>The bank includes material and information from patients with thyroid carcinomas and cellular adenomas from the
         contaminated oblasts of Ukraine who were born after
@@ -94,14 +94,14 @@
         sections from paraffin sections and from sections of tissue microarrays are available.</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
 
-    <h4><a id="three" class="anchor-section"></a>3. Who can obtain material and/or research data from the CTB?</h4>
+    <h4><a id="three" class="anchor-section pt-5"></a>3. Who can obtain material and/or research data from the CTB?</h4>
     <p>The biomaterials available to the international scientific community comprise samples of extracted
         DNA and RNA from tissue, DNA from blood, samples of serum, paraffin embedded sections and tissue
         microarrays. It is not the aim of the project to restrict supply of material to researchers, but to
         coordinate and monitor the use of this unique resource in order to ensure that the maximum possible
         information can be obtained from a limited supply of material.</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="four" class="anchor-section"></a>4. How do researchers apply?</h4>
+    <h4><a id="four" class="anchor-section pt-5"></a>4. How do researchers apply?</h4>
     <p>Researchers who are interested in using material, information or research data from the CTB for research purposes
         must complete a brief, but detailed, proposal that includes information on the study design and justification
         for their requirements for materials and/or data. Researchers can first check whether there are sufficient
@@ -117,7 +117,7 @@
         who are in the process of obtaining funds, are strongly encouraged to contact the CTB Secretariat to obtain
         information on resource availability. The CTB does not provide funding for research projects.</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="five" class="anchor-section"></a>5. How are requests evaluated?</h4>
+    <h4><a id="five" class="anchor-section pt-5"></a>5. How are requests evaluated?</h4>
     <p>Requests are evaluated for scientific merit and appropriate use of CTB resources by the External
         Review Panel (ERP), which is an independent, multi-disciplinary panel of senior researchers in the
         fields of thyroid cancer and radiobiological research. The External Review Panel awards scores for
@@ -129,7 +129,7 @@
         further consideration. Projects may be submitted at any time and the review procedures are, in most
         cases, completed by e-mail.</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="six" class="anchor-section"></a>6. What are the criteria for evaluation and review of applications?</h4>
+    <h4><a id="six" class="anchor-section pt-5"></a>6. What are the criteria for evaluation and review of applications?</h4>
     <p>Criteria have been established to ensure that valid, productive and equitable scientific use is made
         of the CTB resources for multidisciplinary and international studies on post Chernobyl thyroid
         cancer. Approval for a project may be subject to the development of appropriate collaborative links.</p>
@@ -190,7 +190,7 @@
         </li>
     </ol>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
-    <h4><a id="seven" class="anchor-section"></a>7. How do I get an answer to any other queries?</h4>
+    <h4><a id="seven" class="anchor-section pt-5"></a>7. How do I get an answer to any other queries?</h4>
     <p>If you have any questions that are not covered in this fact sheet, please contact us at <a
             href="mailto:ctb-support@isb-cgc.org">ctb-support@isb-cgc.org</a> and we will do our best to help you:</p>
     <div class="mb-5"><a href="#"><i class="fa-solid fa-arrow-up"></i> Back to the top</a></div>
