--- a/templates/ctb/user_detail.html
+++ b/templates/ctb/user_detail.html
@@ -33,7 +33,7 @@
 {% block content %}
     <div class="container my-5">
         <div class="row user-row justify-content-center">
-            <div class="col-md-10">
+            <div class="col-lg-10">
                 <div class="d-flex justify-content-end">
                     <a href="{% url 'account_change_password' %}"
                        class="btn btn-outline-secondary ms-2"><i
