--- a/templates/donors/dashboard.html
+++ b/templates/donors/dashboard.html
@@ -23,7 +23,7 @@
     <div class="container py-3">
         <div class="row">
             <div class="col-lg-12">
-                <div class="alert alert-secondary alert-dismissible fade show" role="alert">
+                <div class="alert alert-primary alert-dismissible fade show" role="alert">
                     <div><strong>Welcome to the Chernobyl Tissue Bank Biosample Search</strong></div>
                     <div class="small">
                         The Chernobyl Tissue Bank Biosample Search allows you to check whether the number of
