--- a/templates/two_factor/core/login.html
+++ b/templates/two_factor/core/login.html
@@ -29,7 +29,7 @@
                                 {% csrf_token %}
                                 {% include "two_factor/_simple_wizard_forms.html" %}
 
-                                <input type="submit" value="" hidden/>
+                                <input type="submit" value="" aria-label="submit" hidden/>
 
                                 {% if other_devices %}
                                     <p>{% trans "Or, alternatively, use one of your other authentication methods:" %}</p>
